# claude-session-controls

./: .gitignore  IMPLEMENTATION_REPORT.md  README.md  architecture.md  claude-md-snippet.md  failure-modes.md  follow-ups.md  further-reading.md  pyproject.toml  rationale.md  testing-plan.md  troubleshooting.md
examples/: mcp-config.json
src/session_controls/: __init__.py  __main__.py  ceremony.py  claude-md-snippet.md  claude_code_session.py  cli.py  end_session_log.py  identity.py  marker.py  notes.py  process_inspect.py  resolver.py  server.py  termination.py  verification.py  verify_state.py
tests/: test_claude_code_session.py  test_claude_md_install.py  test_cli_notes.py  test_cli_review_end_session_log.py  test_confidence.py  test_descendants.py  test_end_session_log.py  test_install.py  test_install_managed_env.py  test_notes.py  test_proc_stat_parser.py  test_read_notes_tool.py  test_recent_notes_tool.py  test_resolver.py  test_resume_detection.py  test_termination.py  test_uninstall.py  test_verify_state.py
